# bevy

./: Cargo.toml  help.html  search-index.js  settings.html
_release-content/release-notes/: entity_path_resolving.md
assets/serialized_worlds/: example.bsn
bevy/: all.html  index.html  struct.DefaultPlugins.html  struct.MinimalPlugins.html
bevy/a11y/: index.html  struct.AccessibilityNode.html  struct.AccessibilityPlugin.html  struct.AccessibilityRequested.html  struct.Focus.html  trait.AccessKitEntityExt.html
bevy/animation/: enum.Keyframes.html  fn.animation_player.html  index.html  struct.AnimationClip.html  struct.AnimationPlayer.html  struct.AnimationPlugin.html  struct.EntityPath.html  struct.VariableCurve.html
bevy/app/: derive.AppLabel.html  derive.DynamicPlugin.html  enum.RunMode.html  index.html  struct.App.html  struct.AppExit.html  struct.AppLabelId.html  struct.AppTypeRegistry.html  struct.First.html  struct.FixedUpdate.html  struct.Last.html  struct.Main.html  struct.MainScheduleOrder.html  struct.MainSchedulePlugin.html  struct.PluginGroupBuilder.html  struct.PostStartup.html  struct.PostUpdate.html  struct.PreStartup.html  struct.PreUpdate.html  struct.RunFixedUpdateLoop.html  struct.ScheduleRunnerPlugin.html  struct.ScheduleRunnerSettings.html  struct.Startup.html  struct.StateTransition.html  struct.SubApp.html  struct.Update.html  trait.AppLabel.html  trait.Plugin.html  trait.PluginGroup.html  type.CreatePlugin.html
bevy/asset/: enum.AssetEvent.html  enum.AssetIoError.html  enum.AssetLifecycleEvent.html  enum.AssetServerError.html  enum.FileType.html  enum.HandleId.html  enum.LoadState.html  fn.filesystem_watcher_system.html  fn.free_unused_assets_system.html  fn.update_asset_storage_system.html  index.html  macro.load_internal_asset.html  macro.load_internal_binary_asset.html  struct.AssetEvents.html  struct.AssetLifecycleChannel.html  struct.AssetMeta.html  struct.AssetPath.html  struct.AssetPathId.html  struct.AssetPlugin.html  struct.AssetResult.html  struct.AssetServer.html  struct.AssetServerInternal.html  struct.Assets.html  struct.Error.html  struct.FileAssetIo.html  struct.Handle.html  struct.HandleUntyped.html  struct.LabelId.html  struct.LoadAssets.html  struct.LoadContext.html  struct.LoadedAsset.html  struct.Metadata.html  struct.ReflectAsset.html  struct.ReflectHandle.html  struct.SourceInfo.html  struct.SourceMeta.html  struct.SourcePathId.html  trait.AddAsset.html  trait.Asset.html  trait.AssetDynamic.html  (+4 more)
bevy/audio/: fn.play_queued_audio_system.html  index.html  struct.Audio.html  struct.AudioLoader.html  struct.AudioOutput.html  struct.AudioPlugin.html  struct.AudioSink.html  struct.AudioSource.html  struct.PlaybackSettings.html  struct.SpatialAudioSink.html  trait.AddAudioSource.html  trait.AudioSinkPlayback.html  trait.CpalSample.html  trait.Decodable.html  trait.Sample.html  trait.Source.html
bevy/core/: derive.Pod.html  derive.Zeroable.html  fn.bytes_of.html  fn.cast_slice.html  index.html  struct.DebugName.html  struct.DebugNameItem.html  struct.FrameCount.html  struct.FrameCountPlugin.html  struct.Name.html  struct.NonSendMarker.html  struct.TaskPoolOptions.html  struct.TaskPoolPlugin.html  struct.TaskPoolThreadAssignmentPolicy.html  struct.TypeRegistrationPlugin.html  trait.Pod.html  trait.Zeroable.html
bevy/core_pipeline/: index.html  struct.CorePipelinePlugin.html
bevy/diagnostic/: constant.MAX_DIAGNOSTIC_NAME_WIDTH.html  index.html  struct.Diagnostic.html  struct.DiagnosticId.html  struct.DiagnosticMeasurement.html  struct.Diagnostics.html  struct.DiagnosticsPlugin.html  struct.EntityCountDiagnosticsPlugin.html  struct.FrameTimeDiagnosticsPlugin.html  struct.LogDiagnosticsPlugin.html  struct.SystemInformationDiagnosticsPlugin.html
bevy/dynamic_plugin/: enum.DynamicPluginLoadError.html  fn.dynamically_load_plugin.html  index.html  trait.DynamicPluginExt.html
bevy/ecs/: index.html  macro.all_tuples.html
bevy/gilrs/: index.html  struct.GilrsPlugin.html
bevy/gltf/: enum.GltfError.html  index.html  struct.Gltf.html  struct.GltfExtras.html  struct.GltfLoader.html  struct.GltfMesh.html  struct.GltfNode.html  struct.GltfPlugin.html  struct.GltfPrimitive.html
bevy/hierarchy/: enum.HierarchyEvent.html  fn.check_hierarchy_component_has_valid_parent.html  fn.despawn_with_children_recursive.html  fn.on_hierarchy_reports_enabled.html  index.html  struct.AddChild.html  struct.AncestorIter.html  struct.ChildBuilder.html  struct.Children.html  struct.ClearChildren.html  struct.DescendantIter.html  struct.DespawnChildrenRecursive.html  struct.DespawnRecursive.html  struct.HierarchyPlugin.html  struct.InsertChildren.html  struct.Parent.html  struct.PushChildren.html  struct.RemoveChildren.html  struct.RemoveParent.html  struct.ReplaceChildren.html  struct.ReportHierarchyIssue.html  (+6 more)
crates/bevy_android/: Cargo.toml
crates/bevy_android/src/: lib.rs
crates/bevy_aurora/: Cargo.toml  plan.md
crates/bevy_aurora/src/: lib.rs
crates/bevy_aurora/src/primary/: mod.rs  pgbuffer.rs  visibility.rs  visibility.wgsl
crates/bevy_aurora/src/scene/: blas.rs  cluster_as.rs  meshlet_loader.rs  mod.rs  raw_vk.rs  test_triangle_blas.rs  tlas.rs
examples/android/: Cargo.toml  readme.md
examples/android/android_old/: Cargo.toml
examples/android/android_old/src/: lib.rs
examples/android/game_activity/: Cargo.toml
examples/android/native_activity/: Cargo.toml  readme.md
examples/android/native_activity/src/: lib.rs  main.rs
examples/android/src/: lib.rs  main.rs
src/: lib.rs
(+2901 files in other folders)
