[package]
name = "bevy_android"
version = "0.9.0"
edition = "2021"
description = "Provides handle to AndroidApp for Bevy Engine"
homepage = "https://bevyengine.org"
repository = "https://github.com/bevyengine/bevy"
license = "MIT OR Apache-2.0"
keywords = ["bevy"]

[dependencies]
bevy_app = { path = "../bevy_app", version = "0.9.0" }
bevy_ecs = { path = "../bevy_ecs", version = "0.9.0" }
bevy_log = { path = "../bevy_log", version = "0.9.0" }

ndk = "0.7" # This version *must* be the same as the version used by android-activity
winit = { version = "0.27", features = ["android-native-activity"] }